SET(RANALLY_MAJOR_VERSION "0")
SET(RANALLY_MINOR_VERSION "0")
SET(RANALLY_PATCH_VERSION "0")
SET(RANALLY_BUILD_STAGE "wip")
SET(RANALLY_COPYRIGHT "Copyright \(C\) 2010 Kor de Jong")

ADD_SUBDIRECTORY(Language)

CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/Configure.h.in
  ${CMAKE_CURRENT_BINARY_DIR}/Configure.h
)

IF(DOXYGEN_FOUND)
  CONFIGURE_FILE(
    ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
    ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
  )

  ADD_CUSTOM_TARGET(doc
    ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Generating API documentation" VERBATIM
  )
ENDIF(DOXYGEN_FOUND)

