ADD_SUBDIRECTORY(Language)

CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/Configure.h.in
  ${CMAKE_CURRENT_BINARY_DIR}/Ranally/Configure.h
)

IF(DOXYGEN_FOUND)
  CONFIGURE_FILE(
    ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
    ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
  )

  ADD_CUSTOM_TARGET(doc
    ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Generating API documentation" VERBATIM
  )
ENDIF(DOXYGEN_FOUND)

