CONFIGURE_FILE(
    ${CMAKE_CURRENT_SOURCE_DIR}/configure.h.in
    ${CMAKE_CURRENT_BINARY_DIR}/configure.h
)

ADD_SUBDIRECTORY(algorithm)
ADD_SUBDIRECTORY(ast)
ADD_SUBDIRECTORY(command)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(feature)
ADD_SUBDIRECTORY(interpreter)
ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(operation)
ADD_SUBDIRECTORY(python)
ADD_SUBDIRECTORY(script)
