INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/../..
)

ADD_SUBDIRECTORY(Tests)

SET(SOURCES
    Attribute
    Dataset
    DatasetDriver
    Domain
    Feature
    HDF5Client
    HDF5Dataset
    HDF5DatasetDriver
    OGRClient
    OGRDataset
    OGRDatasetDriver
    OGRFeatureLayer
    PointAttribute
    PointDomain
    PointFeature
    PointValue
    PolygonAttribute
    PolygonDomain
    PolygonFeature
    PolygonValue
    RasterAttribute
    RasterValue
    SpatialDomain
    SpatioTemporalDomain
    TemporalDomain
    Util
    Value
)
ADD_LIBRARY(RanallyIO
    ${SOURCES}
)
TARGET_LINK_LIBRARIES(RanallyIO
    RanallyUtil
    ${HDF5_LIBRARIES}
    ${GDAL_LIBRARIES}
    ${Boost_FILESYSTEM_LIBRARY}
    ${Boost_SYSTEM_LIBRARY}
)
